css/home.css
/* ... */
.nav-left {
  left: -25px;
}
.nav-right {
  right: -25px;
}
.carousel-arrow-icon-left {
  margin-left: 5px;
  margin-top: 2px;
}
.carousel-arrow-icon-right {
  margin-left: 7px;
  margin-top: 2px;
}
@media (min-width: 1200px) {
  .in-view {
    transform: scale(1.2);
    transition: all 0.2s ease-in;
  }
}
@media (min-width: 992px) {
  .col-md-6 {
    width: 50%;
  }
  .col-md-4 {
    width: 33.33%;
  }
  .col-md-8 {
    width: 66.66%;
  }
}
@media only screen and (max-width: 1100px) {
  .menu-item {
    padding: 24px 15px;
    cursor: pointer;
    font: normal normal medium 16px / 19px Roboto;
    letter-spacing: 0px;
    color: #222222;
    position: relative;
  }
}
@media (min-width: 992px) {
  .col-md-1,
  .col-md-10,
  .col-md-11,
  .col-md-12,
  .col-md-2,
  .col-md-3,
  .col-md-4,
  .col-md-5,
  .col-md-6,
  .col-md-7,
  .col-md-8,
  .col-md-9 {
    float: left;
  }
}
@media only screen and (max-width: 992px) {
  .header-menu {
    display: none;
  }
  .icon-burger {
    display: block;
  }
  .common-video-normal {
    max-width: 100%;
  }
  .img-slider {
    overflow: hidden;
  }
  .hero-bg {
    display: block;
    object-fit: cover;
  }
  .hero-head {
    font: normal normal 800 26px / 40px Poppins;
  }
  .hero-box {
    height: calc(100vh - 180px);
    background-color: black;
    margin-top: 89px;
    border-radius: 9px;
    position: relative;
    margin-bottom: 40px;
  }
  .hero-content {
    position: absolute;
    height: 100%;
    padding: 8px;
  }
  .sticky-box {
    position: relative;
    top: 0;
  }
  .item-box-content {
    height: auto;
  }
  .item-box-content {
    padding: 38px;
  }
  .accordion {
    padding: 15px;
  }
  .footer-info {
    text-align: center;
  }
  .social-media {
    display: flex;
    justify-content: center;
  }
  .footer {
    border-top: 1px solid #c3c3c3;
    text-align: center;
  }
  .footer-menu {
    display: flex;
    justify-content: center;
  }
  .row {
    margin-right: 0;
    margin-left: 0;
    display: block;
    content: " ";
    width: 100%;
  }
  .end-img {
    display: none;
  }
  .end-box {
    height: auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 20px 30px 20px 30px;
  }

  .spl-accordian-wrapper {
    padding-left: 0;
  }
  .bg-video {
    height: auto;
  }
  .hero-content {
    text-align: center;
  }
  .feature-video img {
    object-fit: cover;
    position: relative;
    border-radius: 25px;
  }
  .heading-36 p {
    width: auto;
    margin-left: unset;
    margin-top: unset;
  }
  .heading-36 .complex-text {
    font: normal normal bold 26px / 40px Poppins;
  }
  .content-accord-wrapper {
    margin-top: 100px;
    margin-bottom: -36px;
  }
  .fqAQ-head {
    text-align: center;
    font: normal normal bold 26px / 38px Poppins;
  }
  .accordion button .icon {
    display: inline-block;
    position: absolute;
    top: 55px;
    right: 1px;
  }
  .accordion button[aria-expanded="true"] + .accordion-content {
    opacity: 1;
    max-height: 14em;
  }
  .book-demo-box h2 {
    text-align: center;
    font: normal normal 800 26px / 38px Poppins;
  }
  .book-demo-box p {
    font: normal normal normal 16px / 25px Poppins;
  }
  .emailsection {
    width: 100% !important;
    padding-right: 165px;
  }
  .aiassist-bg {
    height: 342px;
    /* margin-top: -78px; */
  }
  .subcr {
    left: 208px !important;
  }
  .footer-menu a {
    padding: 9px 0px 3px 25px;
  }
  .footer .row {
    display: inline-flex;
    flex-direction: column-reverse;
  }
  .copy-right {
    font: normal normal normal 11px / 51px Poppins;
  }
  .scroll-div-new .scroll-content {
    position: relative;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 15px;
  }
  .scroll-div-new .slideshow-container {
    height: 755px;
    overflow-x: auto;
    display: inline-flex;
  }
  .scroll-div-new {
    overflow-y: unset !important;
    max-height: 621px !important;
  }
  .scroll-div-new .slide {
    display: block;
  }
  .scroll-div-new .imgcontainer {
    height: 200px;
    width: auto !important;
  }
  .item-box-content h3 {
    font: normal normal 800 26px / 38px Poppins;
  }
  .slideshow {
    display: inline-flex;
    overflow-x: auto;
  }
  .scroll-div-new .demoslide {
    width: 242px;
    margin-top: 60px;
    margin-left: -1px;
  }
  .scroll-div-new .slideimg {
    width: 100%;
    position: absolute;
    object-fit: cover;
    overflow: hidden;
    object-fit: fill;
    margin-left: unset;
    margin-top: 126px;
  }
  .line-container {
    position: absolute;
    top: unset;
    right: -10px;
    transform: translateY(0%) translateX(50%) rotate(90deg);
    display: flex;
    flex-direction: column;
    align-items: center;
    display: block !important;
    bottom: 20px;
    right: 50%;
    transform-origin: center;
  }
  .slideshow-container {
    scroll-snap-type: unset !important;
  }
  .error_sub {
    width: 322px !important;
    padding: 8px 11px 7px !important;
  }
  .reduction {
    margin-top: 98px;
  }
  .masksvg {
    margin-top: 200px;
  }
  .expertsvg {
    margin-top: 27px;
  }
  .scrollbehave {
    position: relative;
    height: 453px;
    width: 300px !important;
    height: 774px !important;
    overflow-x: auto;
    display: inline-flex;
    flex-direction: row;
  }
  body {
    margin-bottom: -112px;
  }
  .color-box {
    display: none;
  }
}
.succ_sub {
  text-align: center;
  width: 412px;
}
.succ_sub {
  width: 363px;
  background-color: #e3fbee;
  font: normal normal normal 14px / 21px Poppins;
  letter-spacing: 0px;
  color: #30945e;
  padding: 8px 41px 7px;
  margin-top: 5px;
  position: relative;
  z-index: 0;
  border-radius: 21px;
  position: absolute;
}
.loader {
  width: 23px;
  height: 23px;
  border-radius: 50%;
  display: inline-block;
  border-top: 2px solid #fff;
  border-right: 2px solid transparent;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
}
/* ... */

